--- a/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
+++ b/Contracts/RFP/RFP1_1b_PrecisionLanding.cfg
@@ -3,9 +3,8 @@ CONTRACT_TYPE
     name = RFP1_1b_PrecisionLanding
     title = RFP1.1b: "Precision Landing Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems\n\nOur upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
-    
-    notes = Technology Validation Requirements:\n\nPrecision Landing Systems\nLand probes at 3 specific coordinates on Kerbin in different biomes, demonstrating precision within 500m of target.\n\nSurface Science Operations\nTest surface science operations and data transmission from landed probes to validate scientific capability.\n\nProbe Survival and Operations\nProve probe survival and operation for minimum 10 days to validate extended surface mission capability.\n\nSurface-to-Orbit Communications\nDemonstrate reliable communication between surface assets and orbital relay infrastructure.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Landing Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Precision Surface Probe Landing Systems
+	notes = Our upcoming Duna missions will require precise landing capabilities to deploy surface probes at specific locations of scientific interest. Before committing to interplanetary deployment, we must validate our precision landing technology and surface operations protocols.\n\nThis pathfinder mission will test precision landing systems by deploying probes to specific coordinates across different Kerbin biomes. The varied terrain and environmental conditions will provide comprehensive validation of our landing technology before Duna deployment.\n\nYour objective is to demonstrate precision landing within 500 meters of designated targets, prove surface science operations capability, and validate probe survival and communication systems for extended operations.
     
     synopsis = Validate precision landing and surface operations technology using Kerbin as test environment.
     
@@ -43,9 +42,64 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-
+//==========================================================================================
+//Validation Parameters
+//==========================================================================================
     
-    // Objectives - Land probes at specific coordinates in different biomes
+
+    PARAMETER
+    {
+        name = DevelopAdvancedProbe
+        type = VesselParameterGroup
+        title = Develop Advanced Surface Probes
+	notes = Technology Validation Requirements:\n\nPrecision Landing Systems\nLand probes at 3 specific coordinates on Kerbin in different biomes, demonstrating precision within 500m of target.\n\nSurface Science Operations\nTest surface science operations and data transmission from landed probes to validate scientific capability.\n\nProbe Survival and Operations\nProve probe survival and operation for minimum 10 days to validate extended surface mission capability.\n\nSurface-to-Orbit Communications\nDemonstrate reliable communication between surface assets and orbital relay infrastructure.
+    
+
+
+        PARAMETER
+        {
+            name = HasPower1
+            type = PartValidation
+            partModule = ModuleDeployableSolarPanel
+            minCount = 6
+	    title = Each Probe has 2 Solar Panels
+	    hideChildren = true 
+        }
+        
+        PARAMETER
+        {
+            name = HasAntenna1
+            type = PartValidation
+            partModule = ModuleDataTransmitter
+            minCount = 3
+            title = Each Satellite has Comms
+	    hideChildren = true 
+        }
+        
+        PARAMETER
+        {
+            name = HasScienceExperiments1
+            type = PartValidation
+            partModule = ModuleScienceExperiment
+            minCount = 6
+            title = Each Probe has 2 Science Experiments
+	    hideChildren = true 
+        }
+
+        PARAMETER
+        {
+            name = LowKerbinOrbit
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 80000
+	    hidden = true
+	}
+    }
+
+//==========================================================================================
+// Objectives - Land probes at specific coordinates in different biomes
+//==========================================================================================
+
     PARAMETER
     {
         name = ProbeGrasslands
@@ -61,31 +115,10 @@ CONTRACT_TYPE
             targetBody = Kerbin
             situation = LANDED
             biome = Grasslands
+	    hidden = true
         }
         
-        PARAMETER
-        {
-            name = HasScienceExperiments1
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower1
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna1
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
-        }
+
         
         PARAMETER
         {
@@ -98,6 +131,8 @@ CONTRACT_TYPE
         }
     }
     
+//==========================================================================================
+
     PARAMETER
     {
         name = ProbeDeserts
@@ -113,30 +148,7 @@ CONTRACT_TYPE
             targetBody = Kerbin
             situation = LANDED
             biome = Deserts
-        }
-        
-        PARAMETER
-        {
-            name = HasScienceExperiments2
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower2
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna2
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
+	    hidden = true
         }
         
         PARAMETER
@@ -150,6 +162,8 @@ CONTRACT_TYPE
         }
     }
     
+//==========================================================================================
+
     PARAMETER
     {
         name = ProbeTundra
@@ -165,30 +179,7 @@ CONTRACT_TYPE
             targetBody = Kerbin
             situation = LANDED
             biome = Tundra
-        }
-        
-        PARAMETER
-        {
-            name = HasScienceExperiments3
-            type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-        }
-        
-        PARAMETER
-        {
-            name = HasPower3
-            type = PartValidation
-            partModule = ModuleDeployableSolarPanel
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasAntenna3
-            type = PartValidation
-            partModule = ModuleDataTransmitter
-            minCount = 1
+	    hidden = true
         }
         
         PARAMETER
