--- a/Contracts/RFP/RFP1_1c_ReusableLaunch.cfg
+++ b/Contracts/RFP/RFP1_1c_ReusableLaunch.cfg
@@ -3,14 +3,14 @@ CONTRACT_TYPE
     name = RFP1_1c_ReusableLaunch
     title = RFP1.1c: "Reusable Launch Technology"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Launch Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Reusable Launch System Validation\n\nThe upcoming Duna deployment missions will require multiple heavy launches within tight transfer windows. To optimize costs and increase launch frequency, we need to validate reusable launch technology that can be rapidly refurbished and relaunched.\n\nThis pathfinder mission will test our reusable booster recovery systems and rapid turnaround procedures. Success will enable cost-effective deployment of multiple mission components during the Duna transfer window.\n\nYour objective is to demonstrate booster recovery via powered landing, refurbishment and preparation for reuse, and successful relaunch of the same hardware within 50 days. This will prove our ability to conduct rapid, cost-effective launch operations for the main deployment phase.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Launch Systems Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Reusable Launch System Validation\n\nThe upcoming Duna deployment missions will require multiple heavy launches within tight transfer windows. Current expendable launch systems are inefficient for the scale of operations planned, necessitating reusable technology to reduce costs and increase launch frequency.\n\nThis pathfinder mission will validate our reusable booster technology through powered landing recovery at KSC. The booster must deliver a payload to orbit while retaining sufficient fuel to return to the launch site with all engines intact.\n\nYour objective is to demonstrate a multi-engine booster core that can successfully deliver payload to orbit and return to KSC via powered landing. This will prove the fundamental technology needed for cost-effective deployment during the main Duna mission phase.
     
-    notes = Technology Validation Requirements:\n\nBooster Recovery Systems\nDemonstrate first stage recovery via powered landing, proving reusable launch vehicle technology.\n\nRapid Refurbishment\nRefurbish and prepare recovered booster for relaunch within 50 days to validate rapid turnaround capability.\n\nRelaunch Demonstration\nSuccessfully relaunch the same booster with a new payload, proving reusability and cost efficiency.\n\nCost Efficiency Validation\nDemonstrate cost savings vs expendable systems through successful reuse of primary launch hardware.
+    notes = Technology Validation Requirements:\n\nMulti-Engine Booster Core\nDevelop reusable launch vehicle with minimum 3 engines capable of payload delivery and powered recovery.\n\nPayload Delivery Capability\nSuccessfully deliver payload to target orbit (100-200km) while preserving booster for recovery.\n\nPowered Landing Recovery\nDemonstrate controlled powered landing at KSC with engines intact and fuel remaining.\n\nLanding Site Precision\nProve booster can return precisely to launch site for refurbishment and reuse operations.
     
-    synopsis = Validate reusable launch system technology and rapid turnaround procedures for cost-effective deployment.
+    synopsis = Validate reusable booster technology through orbital payload delivery and powered landing recovery at KSC.
     
-    completedMessage = Remarkable achievement! The reusable launch technology has been successfully validated with proven booster recovery and rapid relaunch capability. This technology will enable cost-effective deployment during the main mission phase. RFP1.1d is now available.
-    
+    completedMessage = Outstanding achievement! Reusable launch technology successfully validated with proven payload delivery and powered landing recovery. Multi-engine booster demonstrated precise return to KSC with engines intact. This technology is ready for scaled deployment during Duna missions. RFP1.1d is now available.
+      
     // Contract parameters
     agent = Lowne Aerospace
     group = RedFrontier
@@ -51,66 +51,102 @@ CONTRACT_TYPE
         persist = true
     }
     
-
-    
-    // Objectives - Initial launch and booster recovery
-    PARAMETER
-    {
-        name = InitialLaunch
-        type = VesselParameterGroup
-        title = Initial Launch - Deploy Payload to Orbit
-        
-        PARAMETER
-        {
-            name = PayloadOrbit
-            type = Orbit
-            targetBody = Kerbin
-            minAltitude = 100000
-            maxAltitude = 150000
-        }
-        
-        PARAMETER
-        {
-            name = HasPayload
-            type = PartValidation
-            partModule = ModuleCommand
-            minCount = 1
-        }
-    }
+//==========================================================================================
+//Validation Parameters
+//==========================================================================================
     
     PARAMETER
     {
-        name = BoosterRecovery
+        name = DevelopReusableBooster
         type = VesselParameterGroup
-        title = Booster Recovery - Powered Landing
-        
-        define = Reusable Booster
-        
-        PARAMETER
-        {
-            name = BoosterLanded
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
-        }
-        
-        PARAMETER
-        {
-            name = HasEngines
-            type = PartValidation
-            partModule = ModuleEngines
-            minCount = 1
-        }
-        
-        PARAMETER
-        {
-            name = HasFuel
-            type = HasResource
-            resource = LiquidFuel
-            minQuantity = 10.0
-        }
-        
-
-    }
+        title = Develop Advanced Surface Probes
+        notes = Technology Validation Requirements: Booster Recovery Systems\nSuccessfully deliver payload to orbit while retaining fuel for booster recovery capability.\nDemonstrate successful booster return to KSC via powered landing with core engines intact.\n\nPayload Delivery\n\nLanding Precision\nProve booster can return to launch site for refurbishment and reuse.
     
+	PARAMETER
+	{
+	    name = HasBoosterEngines
+	    type = PartValidation
+	    partModule = ModuleEngines
+	    minCount = 3
+	    title = Multi-Engine Booster Core (At Least 3 Engines)
+	    hideChildren = true
+	}
+    
+	PARAMETER
+	{
+	    name = HasPayloadCapacity
+	    type = PartValidation
+	    partModule = ModuleCommand
+	    minCount = 1
+	    title = Payload Delivery Capability
+	    hideChildren = true
+	}
+	
+    }
+
+//==========================================================================================
+// Objectives - Initial launch and booster recovery
+//==========================================================================================
+
+    PARAMETER
+    {
+	name = PayloadDelivery
+	type = VesselParameterGroup
+	title = Payload Delivery to Orbit
+    
+	define = Orbital Payload
+    
+	PARAMETER
+	{
+	    name = PayloadOrbit
+	    type = Orbit
+	    targetBody = Kerbin
+	    minAltitude = 100000
+	    maxAltitude = 200000
+	    title = Successfully deliver payload to target orbit
+	    hideChildren = true
+	}
+    }
+
+//==========================================================================================
+
+    PARAMETER
+    {
+	name = BoosterRecovery
+	type = VesselParameterGroup
+	title = Booster Recovery at KSC
+    
+	define = Recovered Booster
+    
+	PARAMETER
+	{
+	    name = ReturnToKSC
+	    type = ReachState
+	    targetBody = Kerbin
+	    situation = LANDED
+	    biome = KSC
+	    title = Land booster at Kerbal Space Center
+	    hideChildren = true
+	}
+    
+	PARAMETER
+	{
+	    name = EnginesIntact
+	    type = PartValidation
+	    partModule = ModuleEngines
+	    minCount = 1
+	    title = Engines survived recovery
+	    hideChildren = true
+	}
+    
+	PARAMETER
+	{
+	    name = FuelRemaining
+	    type = HasResource
+	    resource = LiquidFuel
+	    minQuantity = 1.0
+	    title = Land with any Liquid Fuel remaining
+	    hideChildren = true
+	}
+    }
 }
