--- a/Contracts/RFP/RFP1_1d_OrbitalPlatform.cfg
+++ b/Contracts/RFP/RFP1_1d_OrbitalPlatform.cfg
@@ -51,24 +51,18 @@ CONTRACT_TYPE
         persist = true
     }
     
-    // Objectives - Deploy and test orbital station
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+    
     PARAMETER
     {
-        name = StationDeployment
+        name = StationDevelopment
         type = VesselParameterGroup
-        title = Deploy Prototype Science Station
+        title = Develop and Test Prototype Science Station
         
         define = Minmus Science Station
-        
-        PARAMETER
-        {
-            name = StationOrbit
-            type = Orbit
-            targetBody = Minmus
-            minAltitude = 30000
-            maxAltitude = 100000
-        }
-        
+
         PARAMETER
         {
             name = HasScienceLab
@@ -117,7 +111,32 @@ CONTRACT_TYPE
             minCount = 1
         }
     }
+
+
+//==========================================================================================
+// Objectives - Deploy and test orbital station
+//==========================================================================================
+
     
+    PARAMETER
+    {
+        name = StationDeployment
+        type = VesselParameterGroup
+        title = Deploy Prototype Station to Orbit
+        
+        
+        PARAMETER
+        {
+            name = StationOrbit
+            type = Orbit
+            targetBody = Minmus
+            minAltitude = 30000
+            maxAltitude = 100000
+        }
+    }
+    
+//==========================================================================================
+
     PARAMETER
     {
         name = SupplyMission
@@ -150,6 +169,7 @@ CONTRACT_TYPE
         }
     }
     
+//==========================================================================================
     
     PARAMETER
     {
