--- a/Contracts/RFP/RFP1_1e_ResourceExtraction.cfg
+++ b/Contracts/RFP/RFP1_1e_ResourceExtraction.cfg
@@ -3,9 +3,11 @@ CONTRACT_TYPE
     name = RFP1_1e_ResourceExtraction
     title = RFP1.1e: "Resource Extraction Pathfinder"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: ISRU Systems Validation on Minmus\n\nSustained operations in the Duna system will require reliable in-situ resource utilization to reduce dependency on supply missions from Kerbin. Ike's low gravity and resource composition make it an ideal location for our first interplanetary ISRU facility, but we must validate our technology before interplanetary deployment.\n\nMinmus provides an excellent analog for Ike operations, with similar low gravity conditions and accessible resource deposits. This pathfinder mission will test our complete ISRU chain from ore extraction through fuel production and storage.\n\nYour objective is to deploy a comprehensive resource extraction facility on Minmus that demonstrates ore mining, fuel production, storage systems, and transfer operations. Success will validate our ISRU technology for deployment to Ike during the main mission phase.
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Resource Utilization Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: ISRU Systems Validation on Minmus\n\nSustained operations in the Duna system will require reliable in-situ resource utilization to reduce dependency on supply missions from Kerbin. Ike's low gravity and resource composition make it an ideal location for our first interplanetary ISRU facility, but we must validate our technology before interplanetary deployment.\n\nMinmus serves as our proving ground, offering similar low-gravity conditions and accessible ore
+deposits. This pathfinder mission requires demonstration of a complete resource utilization cycle:
+extraction, processing, and logistics integration.\n\nYour objective is to develop a comprehensive resource extraction system, and ISRU lander to Minmus. This vehicle will demonstrates ore mining, fuel production, storage systems, and transfer operations. Success will validate our ISRU technology for deployment to Ike during upcoming mission phases.
     
-    notes = Technology Validation Requirements:\n\nResource Extraction Operations\nLand resource extraction equipment on Minmus and demonstrate ore mining capability from surface deposits.\n\nFuel Production Systems\nDemonstrate ore processing and fuel production, producing minimum 200 units of fuel from local resources.\n\nStorage and Transfer Systems\nTest fuel storage systems and transfer operations to validate logistics support capability.\n\nAutonomous Operations\nProve facility can operate autonomously with minimal oversight, essential for interplanetary deployment.
+    notes = Technology Validation Requirements:\n\nResource Extraction Operations\nLand resource extraction equipment on Minmus and demonstrate ore mining capability from surface deposits.\n\nFuel Production Systems\nDemonstrate ore processing and fuel production, producing minimum 400 units of fuel from local resources.\n\nStorage and Transfer Systems\nTest fuel storage systems and transfer operations to validate logistics support capability.\n\nAutonomous Operations\nProve facility can operate autonomously with minimal oversight, essential for interplanetary deployment.
     
     synopsis = Validate complete ISRU technology chain on Minmus as analog for Ike operations.
     
@@ -51,35 +53,26 @@ CONTRACT_TYPE
         persist = true
     }
     
-    // Objectives - Deploy and test ISRU facility
-PARAMETER
-{
-    name = ISRUServiceMission
-    type = Sequence
-    title = Demonstrate Complete ISRU Service Cycle   
-
- PARAMETER
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+          
+    PARAMETER
     {
-        name = ResourceFacilityDeployment
+        name = MinmusISRUGroup
         type = VesselParameterGroup
-        title = Deploy ISRU Facility to Minmus
-        
-        define = Minmus ISRU Facility
-        
-        PARAMETER
-        {
-            name = LandOnMinmus
-            type = ReachState
-            targetBody = Minmus
-            situation = LANDED
-        }
-        
+        title = Develop Minmus ISRU Lander
+
+        define = Minmus ISRU Lander
+
         PARAMETER
         {
             name = HasDrill
             type = PartValidation
             partModule = ModuleResourceHarvester
             minCount = 1
+	    title = Test Protorype Drilling Equipment
+	    hideChildren = true
         }
         
         PARAMETER
@@ -88,6 +81,8 @@ PARAMETER
             type = PartValidation
             partModule = ModuleResourceConverter
             minCount = 1
+	    title = Test Fuel Production Methodology
+	    hideChildren = true
         }
 
         PARAMETER
@@ -97,6 +92,7 @@ PARAMETER
 	    resource = Ore
 	    maxQuantity = 5.0
 	    title = Land with empty ore tanks
+	    hidden = true
 	  //  notes = Demonstrates that ore must be mined locally rather than transported from Kerbin.
 	}
         
@@ -106,6 +102,8 @@ PARAMETER
             type = HasResourceCapacity
             resource = Ore
             minQuantity = 600.0
+	    title = Minimun 600 Ore Capacity
+	    hideChildren = true
         }
         
         PARAMETER
@@ -114,67 +112,138 @@ PARAMETER
             type = PartValidation
             partModule = ModuleDeployableSolarPanel
             minCount = 2
+	    title = Has Redundant Solar Arrays (Minimum 2)
+	    hideChildren = true
         }
     }
-    
+
+//==========================================================================================
+// Objectives - Deploy and test ISRU facility
+//==========================================================================================
+
     PARAMETER
     {
-        name = OrbitWithFuel
-        type = VesselParameterGroup
-        title = Return to Orbit with Processed Fuel
+        name = ISRUServiceMission
+        type = Sequence
+        title = Demonstrate Complete ISRU Service Cycle   
 
-        
         PARAMETER
-        {
-            name = MinmusOrbit
-            type = Orbit
-            targetBody = Minmus
-            minAltitude = 10000
-            maxAltitude = 100000
-        }
+       {
+        name = ResourceFacilityDeployment
+        type = VesselParameterGroup
+        title = Deploy ISRU Facility to Minmus
         
+            PARAMETER
+            {
+                name = LandOnMinmus
+                type = ReachState
+                targetBody = Minmus
+                situation = LANDED
+	        hidden = true
+            }
+        }
         PARAMETER
         {
             name = HasOreStorage
             type = HasResource
             resource = Ore
-            minQuantity = 600.0
+            minQuantity = 500.0
+            title = Mine 500 units of regolith
+	    hideChildren = true 
         }
-        
+
+       //======================================================================================
+
         PARAMETER
         {
-            name = HasDockingCapability
-            type = PartValidation
-            partModule = ModuleDockingNode
-            minCount = 1
-            title = Docking capability for fuel transfer
+            name = RefuelLander
+            type = VesselParameterGroup
+            vessel = Minmus ISRU Lander
+            title = Refuel Lander for Return to Orbit
+
+    	    PARAMETER
+	    {
+	        name = FuelProductionDemo
+	        type = HasResource
+	        resource = LiquidFuel
+	        minQuantity = 400.0
+	        title = Produce 400 units of Liquid Fuel
+	        hideChildren = true 
+	    }
+
+	    PARAMETER
+	    {
+	        name = OxidizerProductionDemo
+	        type = HasResource
+	        resource = Oxidizer
+            minQuantity = 400.0
+	        title = Produce 400 units of Oxidizer
+	        hideChildren = true 
+	    }
+	}
+    
+       //======================================================================================
+
+        PARAMETER
+        {
+            name = OrbitWithFuel
+            type = VesselParameterGroup
+            title = Return to Orbit with 600 Ore
+
+        
+            PARAMETER
+            {
+                name = MinmusOrbit
+                type = Orbit
+                targetBody = Minmus
+                minAltitude = 10000
+	        hidden = true
+            }
+        
+            PARAMETER
+            {
+                name = HasOreStorage
+                type = HasResource
+                resource = Ore
+                minQuantity = 600.0
+	        hidden = true
+
+            }
+        }
+    
+//==========================================================================================
+    
+        PARAMETER
+        {
+            name = TransferTest
+            type = VesselParameterGroup
+            title = Fuel Transfer Operations Test
+        
+            //define = Minmus Science Station //commented out for debug
+        
+            PARAMETER
+            {
+                name = DockWithISRU
+                type = Docking
+	            vessel = Minmus ISRU Lander
+                defineDockedVessel = Minmus Science Station
+    	        title = Dock ISRU Lander with Minmus Science Station
+    	        notes = Demonstrate fuel transfer from ISRU facility to existing orbital infrastructure.
+	            hideChildren = true 
+            }
         }
     }
-    
-    
-    PARAMETER
+
+//==========================================================================================   
+// Behaviours - Unlock ISRU parts for pathfinder testing
+//==========================================================================================
+
+    BEHAVIOUR
     {
-        name = TransferTest
-        type = VesselParameterGroup
-        title = Fuel Transfer Operations Test
-        
-        define = Fuel Transfer Craft
-        
-        PARAMETER
-        {
-            name = DockWithISRU
-            type = Docking
-            defineDockedVessel = Minmus ISRU Facility
-        }
-        
-        
-        PARAMETER
-        {
-            name = HasDockingPort
-            type = PartValidation
-            partModule = ModuleDockingNode
-            minCount = 3
-        }
+        name = UnlockISRUParts
+        type = ExperimentalPart
+        part = MiniDrill
+        part = MiniISRU
+        unlockCriteria = CONTRACT_ACCEPTANCE
     }
-    
 }
