--- a/Contracts/RFP/RFP1_2a_DeepDrillingTech.cfg
+++ b/Contracts/RFP/RFP1_2a_DeepDrillingTech.cfg
@@ -31,7 +31,7 @@ CONTRACT_TYPE
     {
         name = RF1_1_Complete
         type = Expression
-	title = title
+	    title = title
         expression = $GLOBAL_rf1_1_allcomplete
     }
     
@@ -44,25 +44,28 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Kerbin
     
-
     
-    // Objectives - Test deep drilling systems
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+    
     PARAMETER
     {
         name = DrillingRoverGroup
         type = VesselParameterGroup
-        title = Deploy Deep Drilling Rover
-        
+        title = Develop and Test Drilling Rover
+
         define = Kerbin Drilling Rover
-        
+
         PARAMETER
         {
-            name = LandOnKerbin
-            type = ReachState
-            targetBody = Kerbin
-            situation = LANDED
+            name = HasContainerInterface
+            type = PartValidation
+            part = KKAOSS.dock.habitat
+            minCount = 1
+            title = Container Docking Interface (KK standard)
         }
-        
+
         PARAMETER
         {
             name = HasDrill
@@ -83,11 +86,11 @@ CONTRACT_TYPE
         
         PARAMETER
         {
-            name = HasScienceExperiments
+            name = HasResourceScanner
             type = PartValidation
-            partModule = ModuleScienceExperiment
-            minCount = 2
-            title = Sample Analysis Equipment
+            partModule = ModuleResourceScanner
+            minCount = 1
+            title = Resource Analysis Equipment
         }
         
         PARAMETER
@@ -107,61 +110,138 @@ CONTRACT_TYPE
             minCount = 1
             title = Communications Equipment
         }
-        
-        PARAMETER
-        {
-            name = HasSampleStorage
-            type = PartValidation
-            partModule = ModuleScienceContainer
-            minCount = 1
-            title = Sample Storage Systems
-        }
     }
-    
-    PARAMETER
+    //==========================================================================================
+
+     PARAMETER
     {
-        name = DrillingOperations
-        type = Timer
-        parameter = DrillingRoverGroup
-        duration = 5d
-        title = Extended Drilling Operations - 5 days
-        notes = Simulate deep drilling to 35m+ depth through extended operation period.
-    }
-    
-    PARAMETER
-    {
-        name = MobilityTest
+        name = OreContainerDeployment
         type = VesselParameterGroup
-        title = Mobility and Drilling Integration Test
+        title = Deploy Provided Standardized Ore Container
+        notes = Deploy the provided ore container design to establish the interface standard for rover integration.
+        
+        define = Standard Ore Container
         
         PARAMETER
         {
-            name = MoveToDifferentBiome
+            name = LandContainerOnKerbin
             type = ReachState
             targetBody = Kerbin
             situation = LANDED
-            biome = Grasslands
-            title = Relocate to different biome (Grasslands)
+        }
+        
+        // Validate this is the provided container design
+        PARAMETER
+        {
+            name = HasOreStorageHub
+            type = PartValidation
+            part = KKAOSS.Storage.mid.g
+            minCount = 1
+            title = Central Storage Hub Present
         }
         
         PARAMETER
         {
-            name = SecondDrillingOp
-            type = Timer
-            duration = 2d
-            title = Second drilling operation - 2 days
-            notes = Demonstrate drilling capability after relocation.
+            name = HasContainerDocking
+            type = PartValidation
+            part = KKAOSS.dock.habitat
+            minCount = 1
+            title = Container Docking Interface
         }
+        
+        PARAMETER
+        {
+            name = HasOreCapacity
+            type = HasResourceCapacity
+            resource = Ore
+            minQuantity = 1000.0
+            title = Ore Storage Capacity (1000+ units)
+        }
+        PARAMETER
+	    {
+	        name = EmptyOreTanks
+	        type = HasResource
+	        resource = Ore
+	        maxQuantity = 5.0
+	        title = Start with empty ore tanks
+	        hidden = true
+	     // notes = Demonstrates that ore must be mined locally rather than transported from Kerbin.
+	    }
     }
+
+//==========================================================================================
+// Objectives - Test deep drilling systems
+//==========================================================================================
+
+
+
+
+//==========================================================================================
+// Integration Operations Testing
+//==========================================================================================
     
     PARAMETER
     {
-        name = SampleCollection
-        type = CollectScience
-        targetBody = Kerbin
-        situation = SrfLanded
-        recoveryMethod = RecoverOrTransmit
-        title = Collect and preserve drill samples
-        notes = Demonstrate sample collection, storage, and data transmission capabilities.
+        name = IntegrationSequence
+        type = Sequence
+        title = Complete Rover-Container Integration Test
+        notes = Execute the complete integration cycle: dock with empty container, relocate to the grassland, and fill with ore.
+        
+        PARAMETER
+        {
+            name = InitialDocking
+            type = Docking
+            vessel = Standard Ore Container
+            vessel = Container Drilling Rover
+            disableOnStateChange = true
+            title = Step 1: Dock with Empty Container
+            hideChildren = true
+            notes = Prove the rover can dock with the standardized container interface.
+        }
+        
+        PARAMETER
+        {
+            name = IntegratedRelocation
+            type = VesselParameterGroup
+            title = Step 2: Relocate Integrated System
+            vessel = Container Drilling Rover
+            hideChildren = true
+            notes = Move the docked rover-container system to mining location.
+            
+            PARAMETER
+            {
+                name = MoveToGrasslands
+                type = ReachState
+                disableOnStateChange = true
+                targetBody = Kerbin
+                situation = LANDED
+                biome = Grasslands
+                title = Relocate to Grasslands biome
+                hideChildren = true
+                
+            }
+        }
+        
+        PARAMETER
+        {
+            name = MiningAndFilling
+            type = HasResource
+            resource = Ore
+            minQuantity = 500.0
+            title = Step 3: Fill Container with Ore (500+ units)
+            hideChildren = true
+            notes = Complete the mining cycle by filling the container with ore at the new location.
+
+            PARAMETER
+            {
+                name = StayInGrasslands
+                type = ReachState
+                disableOnStateChange = true
+                targetBody = Kerbin
+                situation = LANDED
+                biome = Grasslands
+                hidden = true
+            }
+        }
     }
 }
