--- a/Contracts/RFP/RFP1_2b_SampleReturnPath.cfg
+++ b/Contracts/RFP/RFP1_2b_SampleReturnPath.cfg
@@ -39,7 +39,7 @@ CONTRACT_TYPE
     {
         name = DrillingTechValidated
         type = Expression
-	title = title
+	    title = title
         expression = $GLOBAL_mobileDrilling_template_proven
     }
     
@@ -51,33 +51,27 @@ CONTRACT_TYPE
     
     // Target Body
     targetBody = Mun
-    
-
-    // Objectives - Prove sample return operations
-    PARAMETER
+        
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+   
+       PARAMETER
     {
-        name = MunOrbitStation
+        name = DevelopMunStation
         type = VesselParameterGroup
-        title = Deploy Mun Orbital Receiving Station
+        title = Develop Mun Research Station
         
-        define = Mun Sample Station
-        
-        PARAMETER
-        {
-            name = MunOrbit
-            type = Orbit
-            targetBody = Mun
-            minAltitude = 25000
-            maxAltitude = 100000
-        }
-        
-        PARAMETER
+        define = Mun Research Station
+
+           PARAMETER
         {
             name = HasDockingPort
             type = PartValidation
             partModule = ModuleDockingNode
             minCount = 2
-            title = Sample Receiving Docking Ports
+            title = 2 Docking Ports
+            hideChildren = true 
         }
         
         PARAMETER
@@ -87,6 +81,7 @@ CONTRACT_TYPE
             partModule = ModuleScienceLab
             minCount = 1
             title = Sample Analysis Laboratory
+            hideChildren = true 
         }
         
         PARAMETER
@@ -96,23 +91,27 @@ CONTRACT_TYPE
             partModule = ModuleDataTransmitter
             minCount = 1
             title = Communications Systems
+            hideChildren = true 
         }
     }
-    
-    PARAMETER
+
+    //==========================================================================================
+
+        PARAMETER
     {
         name = SampleCollectionLander
         type = VesselParameterGroup
-        title = Deploy Sample Collection Lander
+        title = Develop Sample Collection Lander
         
-        define = Mun Sample Collector
+        define = Mun Sample Lander
         
         PARAMETER
         {
-            name = LandOnMun
-            type = ReachState
-            targetBody = Mun
-            situation = LANDED
+            name = HasDockingCapability
+            type = PartValidation
+            partModule = ModuleDockingNode
+            minCount = 1
+            title = Docking System for Sample Transfer
         }
         
         PARAMETER
@@ -152,61 +151,81 @@ CONTRACT_TYPE
             title = Collect samples using drilling technology
         }
     }
-    
+//==========================================================================================
+// Objectives - Prove sample return operations
+//==========================================================================================
+
     PARAMETER
     {
-        name = SampleReturnVehicle
+        name = MunOrbitStation
         type = VesselParameterGroup
-        title = Sample Return to Orbit
+        title = Deploy Mun Orbital Receiving Station
         
-        define = Mun Sample Return Vehicle
+
         
         PARAMETER
         {
-            name = AscentFromMun
-            type = ReachState
+            name = MunOrbit
+            type = Orbit
             targetBody = Mun
-            situation = ORBITING
-            title = Ascent to Mun orbit with samples
-        }
-        
-        PARAMETER
-        {
-            name = HasSamples
-            type = PartValidation
-            partModule = ModuleScienceContainer
-            minCount = 1
-            title = Samples aboard return vehicle
-        }
-        
-        PARAMETER
-        {
-            name = HasDockingCapability
-            type = PartValidation
-            partModule = ModuleDockingNode
-            minCount = 1
-            title = Docking System for Sample Transfer
+            minAltitude = 25000
+            maxAltitude = 100000
         }
     }
-    
+
+//==========================================================================================
     PARAMETER
     {
-        name = SampleDelivery
-        type = Docking
-        vessel = Mun Sample Station
-        vessel = Mun Sample Return Vehicle
-        title = Dock with orbital station for sample transfer
-        notes = Demonstrate precision docking operations essential for Duna sample return.
-    }
+        name = SampleReturnSequence
+        type = VesselParameterGroup
+        title = Sample Return Vehicle Operations
+        vessel = Mun Sample Lander 
     
-    PARAMETER
-    {
-        name = SampleProcessing
-        type = CollectScience
-        targetBody = Mun
-        situation = InSpaceHigh
-        recoveryMethod = Transmit
-        title = Process and transmit sample analysis
-        notes = Validate sample analysis and data transmission from orbital laboratory.
+        PARAMETER
+        {
+            name = SampleReturnVehicle
+            type = Sequence
+            title = Sample Return to Orbit
+            completeInSequence = true
+
+            PARAMETER
+            {
+                name = LandOnMun
+                type = ReachState
+                targetBody = Mun
+                situation = LANDED
+            }
+                           
+            PARAMETER
+            {
+                name = AscentFromMun
+                type = ReachState
+                targetBody = Mun
+                situation = ORBITING
+                title = Ascent to Mun orbit with samples
+            }
+    
+            PARAMETER
+            {
+                name = SampleDelivery
+                type = Docking
+                vessel = Mun Sample Lander
+                vessel = Mun Research Station
+                title = Dock with orbital station for sample transfer
+                notes = Demonstrate precision docking operations essential for Duna sample return.
+            }
+    
+            PARAMETER
+            {
+                name = SampleProcessing
+                type = CollectScience
+                targetBody = Mun
+                situation = InSpaceHigh
+                recoveryMethod = Transmit
+                title = Process and transmit sample analysis
+                notes = Validate sample analysis and data transmission from orbital laboratory.
+            }
+        }
     }
+
 }
