--- a/Contracts/RFP/RFP1_2c_AdvancedISRU.cfg
+++ b/Contracts/RFP/RFP1_2c_AdvancedISRU.cfg
@@ -61,8 +61,53 @@ CONTRACT_TYPE
     // Target Body
     targetBody = Minmus
     
-    
-    // Objectives - Enhance existing ISRU facility
+//==========================================================================================
+// Validation Parameters
+//==========================================================================================
+
+    PARAMETER
+    {
+        name = EnhancedISRUExpansion
+        type = VesselParameterGroup
+        title = Expand Minmus ISRU Facility
+        
+        define = Enhanced Minmus ISRU
+       
+
+
+    }
+
+
+    PARAMETER
+    {
+        name = BulkTankValidation
+        type = VesselParameterGroup
+        title = Deploy Provided Bulk Storage Tank
+        define = Bulk Tank Pathfinder
+
+        PARAMETER
+        {
+            name = HasStorageHub
+            type = PartValidation
+            part = KKAOSS.Storage.mid.g
+            minCount = 1
+            title = Central Storage Hub Present
+        }
+        
+        PARAMETER
+        {
+            name = HasMultipleDockingPorts
+            type = PartValidation
+            part = KKAOSS.dock.habitat
+            minCount = 2
+            title = Multiple Docking Interfaces (2+)
+        }
+    }
+
+//==========================================================================================
+// Objectives - Enhance existing ISRU facility
+//==========================================================================================
+
     PARAMETER
     {
         name = EnhancedISRUExpansion
@@ -142,29 +187,18 @@ CONTRACT_TYPE
             title = Enhanced Power Generation (minimum 8 panels)
         }
     }
-    
-    PARAMETER
-    {
-        name = AdvancedProduction
-        type = HasResource
-        vessel = Enhanced Minmus ISRU
-        resource = LiquidFuel
-        minQuantity = 800.0
-        title = Demonstrate enhanced fuel production (800+ units)
-        notes = Prove increased production capacity with advanced processing systems.
-    }
-    
+        
     PARAMETER
     {
         name = MultipleFuelTypes
-        type = All
+        type = VesselParameterGroup
         title = Multiple Fuel Types Production
+        vessel = Enhanced Minmus ISRU
         
         PARAMETER
         {
             name = ProduceOxidizer
             type = HasResource
-            vessel = Enhanced Minmus ISRU
             resource = Oxidizer
             minQuantity = 800.0
             title = Oxidizer Production (800+ units)
@@ -174,22 +208,12 @@ CONTRACT_TYPE
         {
             name = ProduceMonoprop
             type = HasResource
-            vessel = Enhanced Minmus ISRU
             resource = MonoPropellant
             minQuantity = 200.0
             title = Monopropellant Production (200+ units)
         }
     }
     
-    PARAMETER
-    {
-        name = AutomatedOperations
-        type = Timer
-        parameter = EnhancedISRUExpansion
-        duration = 20d
-        title = Automated Operations Test - 20 days
-        notes = Facility must demonstrate enhanced autonomous operation with minimal oversight.
-    }
     
     PARAMETER
     {
@@ -239,5 +263,18 @@ CONTRACT_TYPE
                 title = 100+ units monopropellant
             }
         }
+    }
+
+//==========================================================================================
+// Deliver the craft file when contract is accepted
+//==========================================================================================
+
+    BEHAVIOUR
+    {
+        name = DeliverBulkTank
+        type = CopyCraftFile
+        url = ContractPacks/RedFrontier/CraftFiles/BulkFuelTank_Standard.craft
+        craftType = VAB
+        onState = CONTRACT_ACCEPTED
     }
 }
