--- a/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
+++ b/Contracts/RFP/RFP1_1a_InterplanetaryComms.cfg
@@ -3,10 +3,9 @@ CONTRACT_TYPE
     name = RFP1_1a_InterplanetaryComms
     title = RFP1.1a: "Interplanetary Communications Network"
     
-    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Technology Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Communications Relay Architecture Validation\n\nBefore we commit to deploying communications infrastructure in the Duna system, we need to validate our relay constellation management technology. The challenges of maintaining continuous coverage across multiple orbital mechanics require thorough testing.\n\nThis pathfinder mission will test our communications relay architecture in the Kerbin system, where we can monitor performance closely and make adjustments before interplanetary deployment.\n\nYour objective is to deploy and operate a 3-satellite relay constellation that provides continuous coverage during various orbital configurations. This will prove our ability to coordinate multiple communications assets and maintain reliable data transmission under dynamic conditions.
-    
-    notes = Technology Validation Requirements:\n\nRelay Constellation Management\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\n\nContinuous Coverage Demonstration\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\n\nHigh-Gain Antenna Systems\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.\n\nSatellite Coordination\nDemonstrate coordinated operations between multiple satellites including handoff procedures and redundant coverage.
-    
+    description = Mission Computer Terminal: Lowne Aerospace Technology Development Division.\n\nWARNING\nAccess to pathfinder mission briefings requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Communications Technology Division\nTO: Lowne Aerospace / Technology Development Team\nSUBJECT: Communications Relay Architecture Validation\n\n
+    notes = Before we commit to deploying communications infrastructure in the Duna system, we need to validate our relay constellation management technology. The challenges of maintaining continuous coverage across multiple orbital mechanics require thorough testing.\n\nThis pathfinder mission will test our communications relay architecture in the Kerbin system, where we can monitor performance closely and make adjustments before interplanetary deployment.\n\nYour objective is to deploy and operate a 3-satellite relay constellation that provides continuous coverage during various orbital configurations. This will prove our ability to coordinate multiple communications assets and maintain reliable data transmission under dynamic conditions.
+        
     synopsis = Validate communications relay constellation technology in Kerbin system before interplanetary deployment.
     
     completedMessage = Excellent work! The communications relay constellation has successfully demonstrated continuous coverage and coordination capabilities. The technology is now validated for interplanetary deployment. RFP1.1b is now available.
@@ -44,13 +43,12 @@ CONTRACT_TYPE
     targetBody = Kerbin
     
 //==========================================================================================
-PARAMETERS
+//Validation Parameters
 //==========================================================================================
     
-    // Objectives - Deploy 3 relay satellites in different orbits
     PARAMETER
     {
-        name = DeployAdvancedProbe
+        name = DevelopRelayNet
         type = VesselParameterGroup
         title = Develop Flexible Satellite Constellation 
 	notes = Technology Validation Requirements:\n\nRelay Constellation Management\nDeploy 3 relay satellites in different Kerbin orbits to test coordination between multiple communications assets.\n\nContinuous Coverage Demonstration\nProve constellation maintains continuous coverage during orbital mechanics and satellite positioning changes.\n\nHigh-Gain Antenna Systems\nTest high-gain antenna systems and data transmission capabilities under various range and angle conditions.
@@ -88,162 +86,147 @@ PARAMETERS
     }
 
 //==========================================================================================
+// Objectives - Deploy 3 relay satellites in different orbits
+//==========================================================================================
 
-PARAMETER
-{
-    name = RelaySat1Group
-    type = VesselParameterGroup
-    title = Deploy Relay Satellite 1 (Low Orbit)
+    PARAMETER
+    {
+        name = RelaySat1Group
+        type = VesselParameterGroup
+        title = Deploy Relay Satellite 1 (Low Orbit)
     
-    define = Kerbin Relay 1
+        define = Kerbin Relay 1
     
     // Hidden destination/situation parameter
-    PARAMETER
-    {
-        name = ReachKerbin1
-        type = ReachState
-        targetBody = Kerbin
-        situation = ORBITING
-        minAltitude = 150000
-        maxAltitude = 300000
-        hidden = true  // Hides the destination/situation requirement
-    }
+        PARAMETER
+        {
+            name = ReachKerbin1
+            type = ReachState
+            targetBody = Kerbin
+            situation = ORBITING
+            minAltitude = 150000
+            maxAltitude = 300000
+            hidden = true  // Hides the destination/situation requirement
+        }
     
     // Visible altitude parameter
-    PARAMETER
-    {
-        name = OrbitAltitude1
-        type = Orbit
-        targetBody = Kerbin
-        minAltitude = 150000
-        maxAltitude = 300000
-        title = Altitude: Between 150,000 m and 300,000 m
+        PARAMETER
+        {
+            name = OrbitAltitude1
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 150000
+            maxAltitude = 300000
+            title = Altitude: Between 150,000 m and 300,000 m
  	    hideChildren = true
-    }
+        }
     
     // Visible inclination parameter  
-    PARAMETER
-    {
-        name = OrbitInclination1
-        type = Orbit
-        targetBody = Kerbin
-        minAltitude = 150000
-        minInclination = 0
-        maxInclination = 15
-        title = Inclination: Below 15.0°
+        PARAMETER
+        {
+            name = OrbitInclination1
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 150000
+            minInclination = 0
+            maxInclination = 15
+            title = Inclination: Below 15.0°
  	    hideChildren = true
+        }
     }
-}
 //==========================================================================================
 
-PARAMETER
-{
-    name = RelaySat2Group
-    type = VesselParameterGroup
-    title = Deploy Relay Satellite 2 (Medium Orbit)
+    PARAMETER
+    {
+        name = RelaySat2Group
+        type = VesselParameterGroup
+        title = Deploy Relay Satellite 2 (Medium Orbit)
     
-    define = Kerbin Relay 2
+        define = Kerbin Relay 2
     
     // Hidden destination/situation parameter
-    PARAMETER
-    {
-        name = ReachKerbin2
-        type = ReachState
-        targetBody = Kerbin
-        situation = ORBITING 
-        minAltitude = 500000
-        maxAltitude = 800000
-        hidden = true  // Hides the destination/situation requirement
-    }
+        PARAMETER
+        {
+            name = ReachKerbin2
+            type = ReachState
+            targetBody = Kerbin
+            situation = ORBITING 
+            minAltitude = 500000
+            maxAltitude = 800000
+            hidden = true  // Hides the destination/situation requirement
+        }
     
     // Visible altitude parameter
-    PARAMETER
-    {
-        name = OrbitAltitude2
-        type = Orbit
-        targetBody = Kerbin
-        minAltitude = 500000
-        maxAltitude = 800000
-        title = Altitude: Between 500,000 m and 800,000 m
-	hideChildren = true
-    }
+        PARAMETER
+        {
+            name = OrbitAltitude2
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 500000
+            maxAltitude = 800000
+            title = Altitude: Between 500,000 m and 800,000 m
+	    hideChildren = true
+        }
     
     // Visible inclination parameter
-    PARAMETER
-    {
-        name = OrbitInclination2
-        type = Orbit
-        targetBody = Kerbin
-        minAltitude = 500000
-        minInclination = 30
-        maxInclination = 60
-        title = Inclination: Between 30.0° and 60.0°
-	hideChildren = true
+        PARAMETER
+        {
+            name = OrbitInclination2
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 500000
+            minInclination = 30
+            maxInclination = 60
+            title = Inclination: Between 30.0° and 60.0°
+    	    hideChildren = true
+         }
     }
-}
     
 //==========================================================================================
 
-PARAMETER
-{
-    name = RelaySat3Group
-    type = VesselParameterGroup
-    title = Deploy Relay Satellite 3 (High Orbit)
-        
-    define = Kerbin Relay 3
-        
     PARAMETER
     {
-        name = OrbitKerbin3
-        type = Orbit
-        targetBody = Kerbin
-        situation = ORBITING
-        minAltitude = 1000000
-        maxAltitude = 2000000
-        hidden = true  // Hides the destination/situation requirement
-    }
+        name = RelaySat3Group
+        type = VesselParameterGroup
+        title = Deploy Relay Satellite 3 (High Orbit)
+        
+        define = Kerbin Relay 3
+         
+        PARAMETER
+        {
+            name = OrbitKerbin3
+            type = Orbit
+            targetBody = Kerbin
+            situation = ORBITING
+            minAltitude = 1000000
+            maxAltitude = 2000000
+            hidden = true  // Hides the destination/situation requirement
+        }
     
     // Visible altitude parameter
-    PARAMETER
-    {
-        name = OrbitAltitude3
-        type = Orbit
-        targetBody = Kerbin
-        minAltitude = 1000000
-        maxAltitude = 2000000
-        title = Altitude: Between 1,000,000 m and 2,000,000 m
-        hideChildren = true
-    }
+        PARAMETER
+        {
+            name = OrbitAltitude3
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 1000000
+            maxAltitude = 2000000
+            title = Altitude: Between 1,000,000 m and 2,000,000 m
+            hideChildren = true
+        }
     
     // Visible inclination parameter
-    PARAMETER
-    {
-        name = OrbitInclination3
-        type = Orbit
-        targetBody = Kerbin
-        minAltitude = 1000000
-        minInclination = 75
-        maxInclination = 105
-        title = Inclination: Between 75.0° and 105.0°
-        hideChildren = true
-     }
-}
-    
-//==========================================================================================
-Behaviors
-//==========================================================================================
-
-    BEHAVIOUR
-    {
-	name = AutoAcceptMessage
-	type = Message
-	    
-	title = Mission Control
-	message = Mission Computer Terminal: Lowne Aerospace Deep Space Operations Division.\n\nWARNING\nAccess to mission briefings and operation status reports requires appropriate security clearance.\n\nFROM: Kerbal Space Center - Deep Space Science Division\nTO: Lowne Aerospace / Mission Planning Team\nSUBJECT: Contract Award - Duna Investigation Initiative\n\nThe Science Council has reviewed all submitted proposals for the Duna investigation mission and is pleased to inform you that Lowne Aerospace has been selected as the primary contractor.\n\nYour company's innovative approach to deep space operations and proven track record in complex mission execution make you the ideal partner for this scientific endeavor. The initiative has been assigned the codename "RED FRONTIER" and classified as a Priority Alpha mission.\n\nBefore committing to expensive interplanetary deployment, we will conduct comprehensive technology validation through pathfinder missions in the Kerbin system. This approach ensures mission success while minimizing risk and cost overruns.
-	  
-	CONDITION
-	{
-	    condition = CONTRACT_ACCEPTED
-	}
+        PARAMETER
+        {
+            name = OrbitInclination3
+            type = Orbit
+            targetBody = Kerbin
+            minAltitude = 1000000
+            minInclination = 75
+            maxInclination = 105
+            title = Inclination: Between 75.0° and 105.0°
+            hideChildren = true
+        }
     }
+    
 }
